syntax = "proto3";

option java_multiple_files = true;

package hcmus.zingmp3.media;

message MediaGrpcRequest {
  string id = 1;
}

message MediaGrpcResponse {
  string id = 1;
  repeated string urls = 2;
}

service MediaGrpcService {
  rpc getById(MediaGrpcRequest) returns (MediaGrpcResponse);
}
