syntax = "proto3";

option java_multiple_files = true;

import "GrpcImage.proto";
package hcmus.zingmp3.audio;

message AudioRequest {
  hcmus.zingmp3.image.File file = 1;
}

message AudioResponse {
  string id = 1;
  hcmus.zingmp3.image.UploadStatus status = 2;
  string url = 3;
}

message AudioFileInfo {
  string id = 1;
  string object = 2;
  string name = 3;
  string type = 4;
  int64 size = 5;
  int64 bitrate = 6;
  string url = 7;
}

service AudioService {
  rpc getById(AudioFileInfo) returns (AudioFileInfo);
  rpc getOrCreateIfNotExists(stream AudioRequest) returns (AudioResponse);
}
